--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,4 +1,12 @@
 @charset "utf-8";
+.hiddenTool{
+  padding: 0px !important;
+  height:0px;
+  overflow: hidden;
+}
+.showTool{
+  height:141px;
+}
 * {
   outline:none;
 }
@@ -247,6 +255,23 @@ body {
             }
           }
         }
+        .batch--info--box{
+          height: 48px;
+          line-height: 48px;
+          margin-bottom: 10px;
+          .batch--info--count{
+            display: inline-block;
+            vertical-align: sub;
+            .title{
+              font-size: 16px;
+              margin-right: 15px;
+            }
+            .data--count{
+              color: #3B98BE;
+              //color: #3a87ad;
+            }
+          }
+        }
       }
     }
   }
@@ -421,6 +446,7 @@ body {
 .green--btn{
   background: #40B98E !important;
   color: #ffffff !important;
+  padding: 0 12px;
   &:hover{
     background: #03ce86 !important;
   }
@@ -428,6 +454,7 @@ body {
 .red--btn{
   background: #E1654F !important;
   color: #ffffff !important;
+  padding: 0 12px;
   &:hover{
     background: #de421b !important;
   }
