--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,10 +1,10 @@
 .hiddenTool {
   padding: 0px !important;
-  height: 0px;
+  max-height: 0;
   overflow: hidden; }
 
 .showTool {
-  height: 141px; }
+  max-height: 500px; }
 
 * {
   outline: none; }
