--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -4,11 +4,14 @@
 @import "main/buttons";
 @import "main/body";
 @import "main/input";
+@import "main/select";
 @import "../common/hsTemplates/css/hsTemplates";
 @import "../common/hsUiGridTemplates/css/uiGridTemplates";
 @import "../common/directive/collapsibleTree/css/collapsibleTree";
+@import "../common/directive/messageVerify/css/formMessage";
 @import "../modules/dataBase/css/dataBase";
 @import "../modules/login/css/login";
 @import "../modules/main/css/infoArchives";
 @import "../modules/projectManage/css/projectManage";
+
 
