--- a/app/modules/dataBase/css/_dataBase.scss
+++ b/app/modules/dataBase/css/_dataBase.scss
@@ -146,7 +146,26 @@
       color: #999999;
       padding: 0 7px;
     }
+    //dataModule
+    .save--template--box{
+      position: absolute;
+      right: 12px;
+      .current--vesion{
+        display: inline-block;
+        color: #333333;
+        vertical-align: middle;
+        &__select{
+          display: inline-block;
+        }
+      }
+    }
   }
+}
+//dataModule
+.two--px--line{
+  width: 100%;
+  height: 2px;
+  background: #d7d7d7;
 }
 
 .data--base--wrapper{
