--- a/app/modules/projectManage/css/_projectManage.scss
+++ b/app/modules/projectManage/css/_projectManage.scss
@@ -101,12 +101,6 @@
           &__select{
             display: inline-block;
             width: 200px;
-            border: 1px solid #e1e1e1;
-            border-bottom: none;
-            border-radius: 4px;
-            height: 34px;
-            line-height: 29px;
-            margin: 0;
             &.ref--rules--short--select{
               width: auto;
               max-width: 150px;
@@ -120,4 +114,37 @@
 .new--project--manage--modal--footer{
   border-top: 1px solid #e4e4e4;
   padding: 20px;
+}
+
+//dataModule
+.data--module--new--prompt--wrap{
+  width: 100%;
+  height: 100%;
+  .new--prompt--box{
+    color: #337ab7;
+    background: #ECF6FB;
+    padding: 20px;
+    margin-top: 20px;
+    &__head{
+      font-size: 16px;
+      img{
+        margin: 0 7px;
+      }
+    }
+    .prompt-content{
+      padding: 10px 0;
+    }
+  }
+  .new--prompt__btn--box{
+    text-align: center;
+    font-size: 18px;
+    color: #e4e4e4;
+    margin-top: 90px;
+    .title--content{
+      padding: 15px 0;
+    }
+    button{
+      padding: 4px 40px;
+    }
+  }
 }
